--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-modal-component-4-op",
+  "description": "Modal popup",
+  "keywords": ["react","modal","popup", "components", "ui"],
   "version": "0.1.0",
+  "files": [ "dist", "README.md" ],
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
