--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "description": "Modal popup",
   "keywords": ["react","modal","popup", "components", "ui"],
   "version": "0.1.0",
+  "main": "dist/index.js", 
+  "module": "dist/index.js", 
   "files": [ "dist", "README.md" ],
-  "private": true,
+  "private": false,
+  "dépôt": { 
+    "type": "git", 
+    "url": "git+https://github.com/Ced933/my-modal-4_op.git" 
+},
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.17.0",
